# oneMKL

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  MAINTAINERS.md  README.md
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: coverity.yml  fix.coverity-2024.12.patch  pr-arm.yml  pr-x86.yml  pr.yml
cmake/: FindARMPL.cmake  FindCBLAS.cmake  FindCompiler.cmake  FindcuBLAS.cmake  FindcuRAND.cmake  FindcuSOLVER.cmake
cmake/mkl/: MKLConfig.cmake  MKLConfigVersion.cmake
docs/: building_and_running_tests.rst  building_the_project_with_adaptivecpp.rst  building_the_project_with_dpcpp.rst  conf.py.in  index.rst  introduction.rst  requirements.txt
docs/domains/: sparse_linear_algebra.rst
examples/lapack/compile_time_dispatching/: CMakeLists.txt
examples/lapack/run_time_dispatching/: CMakeLists.txt
include/oneapi/math/detail/: backends_table.hpp
include/oneapi/math/lapack/: exceptions.hpp
src/blas/backends/armpl/: armpl_level1.cxx
src/blas/backends/cublas/: CMakeLists.txt  cublas_batch.cpp  cublas_extensions.cpp  cublas_level1.cpp  cublas_level2.cpp  cublas_level3.cpp  cublas_scope_handle.cpp  cublas_scope_handle.hpp  cublas_scope_handle_hipsycl.cpp  cublas_task.hpp
src/blas/backends/generic/: CMakeLists.txt  generic_level1.cxx
src/blas/backends/mkl_common/: mkl_level1.cxx
src/blas/backends/mklcpu/: mklcpu_level1.cpp
src/blas/backends/rocblas/: rocblas_scope_handle.hpp  rocblas_task.hpp
src/dft/backends/: CMakeLists.txt
src/dft/backends/armpl/: CMakeLists.txt  armpl_helpers.hpp  armpl_wrappers.cpp  backward.cpp  commit.cpp  descriptor.cpp  forward.cpp
src/dft/backends/mklgpu/: backward.cpp  commit.cpp  forward.cpp  mklgpu_helpers.hpp
src/include/: common_onemkl_conversion.hpp  function_table_initializer.hpp
src/lapack/backends/armpl/: CMakeLists.txt  armpl_batch.cpp  armpl_common.hpp  armpl_wrappers.cpp  armpl_wrappers_table_dyn.cpp
src/lapack/backends/mkl_common/: mkl_lapack.cxx
src/lapack/backends/mklcpu/: CMakeLists.txt
src/lapack/backends/mklgpu/: CMakeLists.txt
src/rng/backends/curand/: curand_task.hpp
src/rng/backends/mklcpu/: cpu_common.hpp
src/rng/backends/rocrand/: rocrand_task.hpp
src/sparse_blas/backends/cusparse/: CMakeLists.txt
tests/unit_tests/: CMakeLists.txt
tests/unit_tests/blas/: CMakeLists.txt
tests/unit_tests/blas/batch/: CMakeLists.txt
tests/unit_tests/blas/sycl-graph/: CMakeLists.txt  gemm_batch_usm.cpp  gemm_usm.cpp
tests/unit_tests/include/: test_helper.hpp
tests/unit_tests/lapack/: CMakeLists.txt
(+29 files in other folders)
